backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    FOR
    INCREMENT
    LESS_EQUAL
    OUT
    PRINTLN
    SYSTEM

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declaraciones instrucciones RBRACE
Rule 2     declaraciones -> declaraciones declaracion
Rule 3     declaraciones -> declaracion
Rule 4     declaraciones -> empty
Rule 5     declaracion -> INT IDENTIFIER lista_identificadores SEMICOLON
Rule 6     lista_identificadores -> COMA IDENTIFIER lista_identificadores
Rule 7     lista_identificadores -> empty
Rule 8     instrucciones -> instrucciones instruccion
Rule 9     instrucciones -> instruccion
Rule 10    instrucciones -> empty
Rule 11    instruccion -> lectura
Rule 12    instruccion -> asignacion
Rule 13    instruccion -> impresion
Rule 14    instruccion -> fin
Rule 15    lectura -> READ IDENTIFIER SEMICOLON
Rule 16    asignacion -> IDENTIFIER EQUALS expresion SEMICOLON
Rule 17    expresion -> IDENTIFIER PLUS IDENTIFIER
Rule 18    expresion -> IDENTIFIER
Rule 19    expresion -> NUMBER
Rule 20    impresion -> PRINTF LPAREN STRING RPAREN SEMICOLON
Rule 21    fin -> END SEMICOLON
Rule 22    empty -> <empty>
Rule 23    lectura -> READ error SEMICOLON
Rule 24    asignacion -> IDENTIFIER EQUALS error SEMICOLON
Rule 25    impresion -> PRINTF LPAREN error RPAREN SEMICOLON
Rule 26    fin -> END error

Terminals, with rules where they appear

COMA                 : 6
DOT                  : 
END                  : 21 26
EQUALS               : 16 24
FOR                  : 
IDENTIFIER           : 1 5 6 15 16 17 17 18 24
INCREMENT            : 
INT                  : 5
LBRACE               : 1
LESS_EQUAL           : 
LPAREN               : 1 20 25
NUMBER               : 19
OUT                  : 
PLUS                 : 17
PRINTF               : 20 25
PRINTLN              : 
PROGRAMA             : 1
RBRACE               : 1
READ                 : 15 23
RPAREN               : 1 20 25
SEMICOLON            : 5 15 16 20 21 23 24 25
STRING               : 20
SYSTEM               : 
error                : 23 24 25 26

Nonterminals, with rules where they appear

asignacion           : 12
declaracion          : 2 3
declaraciones        : 1 2
empty                : 4 7 10
expresion            : 16
fin                  : 14
impresion            : 13
instruccion          : 8 9
instrucciones        : 1 8
lectura              : 11
lista_identificadores : 5 6
programa             : 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declaraciones instrucciones RBRACE

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . IDENTIFIER LPAREN RPAREN LBRACE declaraciones instrucciones RBRACE

    IDENTIFIER      shift and go to state 3


state 3

    (1) programa -> PROGRAMA IDENTIFIER . LPAREN RPAREN LBRACE declaraciones instrucciones RBRACE

    LPAREN          shift and go to state 4


state 4

    (1) programa -> PROGRAMA IDENTIFIER LPAREN . RPAREN LBRACE declaraciones instrucciones RBRACE

    RPAREN          shift and go to state 5


state 5

    (1) programa -> PROGRAMA IDENTIFIER LPAREN RPAREN . LBRACE declaraciones instrucciones RBRACE

    LBRACE          shift and go to state 6


state 6

    (1) programa -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE . declaraciones instrucciones RBRACE
    (2) declaraciones -> . declaraciones declaracion
    (3) declaraciones -> . declaracion
    (4) declaraciones -> . empty
    (5) declaracion -> . INT IDENTIFIER lista_identificadores SEMICOLON
    (22) empty -> .

  ! shift/reduce conflict for INT resolved as shift
    INT             shift and go to state 10
    READ            reduce using rule 22 (empty -> .)
    IDENTIFIER      reduce using rule 22 (empty -> .)
    PRINTF          reduce using rule 22 (empty -> .)
    END             reduce using rule 22 (empty -> .)
    RBRACE          reduce using rule 22 (empty -> .)

  ! INT             [ reduce using rule 22 (empty -> .) ]

    declaraciones                  shift and go to state 7
    declaracion                    shift and go to state 8
    empty                          shift and go to state 9

state 7

    (1) programa -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declaraciones . instrucciones RBRACE
    (2) declaraciones -> declaraciones . declaracion
    (8) instrucciones -> . instrucciones instruccion
    (9) instrucciones -> . instruccion
    (10) instrucciones -> . empty
    (5) declaracion -> . INT IDENTIFIER lista_identificadores SEMICOLON
    (11) instruccion -> . lectura
    (12) instruccion -> . asignacion
    (13) instruccion -> . impresion
    (14) instruccion -> . fin
    (22) empty -> .
    (15) lectura -> . READ IDENTIFIER SEMICOLON
    (23) lectura -> . READ error SEMICOLON
    (16) asignacion -> . IDENTIFIER EQUALS expresion SEMICOLON
    (24) asignacion -> . IDENTIFIER EQUALS error SEMICOLON
    (20) impresion -> . PRINTF LPAREN STRING RPAREN SEMICOLON
    (25) impresion -> . PRINTF LPAREN error RPAREN SEMICOLON
    (21) fin -> . END SEMICOLON
    (26) fin -> . END error

  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for PRINTF resolved as shift
  ! shift/reduce conflict for END resolved as shift
    INT             shift and go to state 10
    RBRACE          reduce using rule 22 (empty -> .)
    READ            shift and go to state 20
    IDENTIFIER      shift and go to state 11
    PRINTF          shift and go to state 21
    END             shift and go to state 22

  ! READ            [ reduce using rule 22 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 22 (empty -> .) ]
  ! PRINTF          [ reduce using rule 22 (empty -> .) ]
  ! END             [ reduce using rule 22 (empty -> .) ]

    instrucciones                  shift and go to state 12
    declaracion                    shift and go to state 13
    instruccion                    shift and go to state 14
    empty                          shift and go to state 15
    lectura                        shift and go to state 16
    asignacion                     shift and go to state 17
    impresion                      shift and go to state 18
    fin                            shift and go to state 19

state 8

    (3) declaraciones -> declaracion .

    INT             reduce using rule 3 (declaraciones -> declaracion .)
    READ            reduce using rule 3 (declaraciones -> declaracion .)
    IDENTIFIER      reduce using rule 3 (declaraciones -> declaracion .)
    PRINTF          reduce using rule 3 (declaraciones -> declaracion .)
    END             reduce using rule 3 (declaraciones -> declaracion .)
    RBRACE          reduce using rule 3 (declaraciones -> declaracion .)


state 9

    (4) declaraciones -> empty .

    INT             reduce using rule 4 (declaraciones -> empty .)
    READ            reduce using rule 4 (declaraciones -> empty .)
    IDENTIFIER      reduce using rule 4 (declaraciones -> empty .)
    PRINTF          reduce using rule 4 (declaraciones -> empty .)
    END             reduce using rule 4 (declaraciones -> empty .)
    RBRACE          reduce using rule 4 (declaraciones -> empty .)


state 10

    (5) declaracion -> INT . IDENTIFIER lista_identificadores SEMICOLON

    IDENTIFIER      shift and go to state 23


state 11

    (16) asignacion -> IDENTIFIER . EQUALS expresion SEMICOLON
    (24) asignacion -> IDENTIFIER . EQUALS error SEMICOLON

    EQUALS          shift and go to state 24


state 12

    (1) programa -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declaraciones instrucciones . RBRACE
    (8) instrucciones -> instrucciones . instruccion
    (11) instruccion -> . lectura
    (12) instruccion -> . asignacion
    (13) instruccion -> . impresion
    (14) instruccion -> . fin
    (15) lectura -> . READ IDENTIFIER SEMICOLON
    (23) lectura -> . READ error SEMICOLON
    (16) asignacion -> . IDENTIFIER EQUALS expresion SEMICOLON
    (24) asignacion -> . IDENTIFIER EQUALS error SEMICOLON
    (20) impresion -> . PRINTF LPAREN STRING RPAREN SEMICOLON
    (25) impresion -> . PRINTF LPAREN error RPAREN SEMICOLON
    (21) fin -> . END SEMICOLON
    (26) fin -> . END error

    RBRACE          shift and go to state 25
    READ            shift and go to state 20
    IDENTIFIER      shift and go to state 11
    PRINTF          shift and go to state 21
    END             shift and go to state 22

    instruccion                    shift and go to state 26
    lectura                        shift and go to state 16
    asignacion                     shift and go to state 17
    impresion                      shift and go to state 18
    fin                            shift and go to state 19

state 13

    (2) declaraciones -> declaraciones declaracion .

    INT             reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    READ            reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    IDENTIFIER      reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    PRINTF          reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    END             reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    RBRACE          reduce using rule 2 (declaraciones -> declaraciones declaracion .)


state 14

    (9) instrucciones -> instruccion .

    RBRACE          reduce using rule 9 (instrucciones -> instruccion .)
    READ            reduce using rule 9 (instrucciones -> instruccion .)
    IDENTIFIER      reduce using rule 9 (instrucciones -> instruccion .)
    PRINTF          reduce using rule 9 (instrucciones -> instruccion .)
    END             reduce using rule 9 (instrucciones -> instruccion .)


state 15

    (10) instrucciones -> empty .

    RBRACE          reduce using rule 10 (instrucciones -> empty .)
    READ            reduce using rule 10 (instrucciones -> empty .)
    IDENTIFIER      reduce using rule 10 (instrucciones -> empty .)
    PRINTF          reduce using rule 10 (instrucciones -> empty .)
    END             reduce using rule 10 (instrucciones -> empty .)


state 16

    (11) instruccion -> lectura .

    RBRACE          reduce using rule 11 (instruccion -> lectura .)
    READ            reduce using rule 11 (instruccion -> lectura .)
    IDENTIFIER      reduce using rule 11 (instruccion -> lectura .)
    PRINTF          reduce using rule 11 (instruccion -> lectura .)
    END             reduce using rule 11 (instruccion -> lectura .)


state 17

    (12) instruccion -> asignacion .

    RBRACE          reduce using rule 12 (instruccion -> asignacion .)
    READ            reduce using rule 12 (instruccion -> asignacion .)
    IDENTIFIER      reduce using rule 12 (instruccion -> asignacion .)
    PRINTF          reduce using rule 12 (instruccion -> asignacion .)
    END             reduce using rule 12 (instruccion -> asignacion .)


state 18

    (13) instruccion -> impresion .

    RBRACE          reduce using rule 13 (instruccion -> impresion .)
    READ            reduce using rule 13 (instruccion -> impresion .)
    IDENTIFIER      reduce using rule 13 (instruccion -> impresion .)
    PRINTF          reduce using rule 13 (instruccion -> impresion .)
    END             reduce using rule 13 (instruccion -> impresion .)


state 19

    (14) instruccion -> fin .

    RBRACE          reduce using rule 14 (instruccion -> fin .)
    READ            reduce using rule 14 (instruccion -> fin .)
    IDENTIFIER      reduce using rule 14 (instruccion -> fin .)
    PRINTF          reduce using rule 14 (instruccion -> fin .)
    END             reduce using rule 14 (instruccion -> fin .)


state 20

    (15) lectura -> READ . IDENTIFIER SEMICOLON
    (23) lectura -> READ . error SEMICOLON

    IDENTIFIER      shift and go to state 27
    error           shift and go to state 28


state 21

    (20) impresion -> PRINTF . LPAREN STRING RPAREN SEMICOLON
    (25) impresion -> PRINTF . LPAREN error RPAREN SEMICOLON

    LPAREN          shift and go to state 29


state 22

    (21) fin -> END . SEMICOLON
    (26) fin -> END . error

    SEMICOLON       shift and go to state 30
    error           shift and go to state 31


state 23

    (5) declaracion -> INT IDENTIFIER . lista_identificadores SEMICOLON
    (6) lista_identificadores -> . COMA IDENTIFIER lista_identificadores
    (7) lista_identificadores -> . empty
    (22) empty -> .

    COMA            shift and go to state 33
    SEMICOLON       reduce using rule 22 (empty -> .)

    lista_identificadores          shift and go to state 32
    empty                          shift and go to state 34

state 24

    (16) asignacion -> IDENTIFIER EQUALS . expresion SEMICOLON
    (24) asignacion -> IDENTIFIER EQUALS . error SEMICOLON
    (17) expresion -> . IDENTIFIER PLUS IDENTIFIER
    (18) expresion -> . IDENTIFIER
    (19) expresion -> . NUMBER

    error           shift and go to state 37
    IDENTIFIER      shift and go to state 35
    NUMBER          shift and go to state 38

    expresion                      shift and go to state 36

state 25

    (1) programa -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declaraciones instrucciones RBRACE .

    $end            reduce using rule 1 (programa -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declaraciones instrucciones RBRACE .)


state 26

    (8) instrucciones -> instrucciones instruccion .

    RBRACE          reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    READ            reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    IDENTIFIER      reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    PRINTF          reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    END             reduce using rule 8 (instrucciones -> instrucciones instruccion .)


state 27

    (15) lectura -> READ IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 39


state 28

    (23) lectura -> READ error . SEMICOLON

    SEMICOLON       shift and go to state 40


state 29

    (20) impresion -> PRINTF LPAREN . STRING RPAREN SEMICOLON
    (25) impresion -> PRINTF LPAREN . error RPAREN SEMICOLON

    STRING          shift and go to state 41
    error           shift and go to state 42


state 30

    (21) fin -> END SEMICOLON .

    RBRACE          reduce using rule 21 (fin -> END SEMICOLON .)
    READ            reduce using rule 21 (fin -> END SEMICOLON .)
    IDENTIFIER      reduce using rule 21 (fin -> END SEMICOLON .)
    PRINTF          reduce using rule 21 (fin -> END SEMICOLON .)
    END             reduce using rule 21 (fin -> END SEMICOLON .)


state 31

    (26) fin -> END error .

    RBRACE          reduce using rule 26 (fin -> END error .)
    READ            reduce using rule 26 (fin -> END error .)
    IDENTIFIER      reduce using rule 26 (fin -> END error .)
    PRINTF          reduce using rule 26 (fin -> END error .)
    END             reduce using rule 26 (fin -> END error .)


state 32

    (5) declaracion -> INT IDENTIFIER lista_identificadores . SEMICOLON

    SEMICOLON       shift and go to state 43


state 33

    (6) lista_identificadores -> COMA . IDENTIFIER lista_identificadores

    IDENTIFIER      shift and go to state 44


state 34

    (7) lista_identificadores -> empty .

    SEMICOLON       reduce using rule 7 (lista_identificadores -> empty .)


state 35

    (17) expresion -> IDENTIFIER . PLUS IDENTIFIER
    (18) expresion -> IDENTIFIER .

    PLUS            shift and go to state 45
    SEMICOLON       reduce using rule 18 (expresion -> IDENTIFIER .)


state 36

    (16) asignacion -> IDENTIFIER EQUALS expresion . SEMICOLON

    SEMICOLON       shift and go to state 46


state 37

    (24) asignacion -> IDENTIFIER EQUALS error . SEMICOLON

    SEMICOLON       shift and go to state 47


state 38

    (19) expresion -> NUMBER .

    SEMICOLON       reduce using rule 19 (expresion -> NUMBER .)


state 39

    (15) lectura -> READ IDENTIFIER SEMICOLON .

    RBRACE          reduce using rule 15 (lectura -> READ IDENTIFIER SEMICOLON .)
    READ            reduce using rule 15 (lectura -> READ IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 15 (lectura -> READ IDENTIFIER SEMICOLON .)
    PRINTF          reduce using rule 15 (lectura -> READ IDENTIFIER SEMICOLON .)
    END             reduce using rule 15 (lectura -> READ IDENTIFIER SEMICOLON .)


state 40

    (23) lectura -> READ error SEMICOLON .

    RBRACE          reduce using rule 23 (lectura -> READ error SEMICOLON .)
    READ            reduce using rule 23 (lectura -> READ error SEMICOLON .)
    IDENTIFIER      reduce using rule 23 (lectura -> READ error SEMICOLON .)
    PRINTF          reduce using rule 23 (lectura -> READ error SEMICOLON .)
    END             reduce using rule 23 (lectura -> READ error SEMICOLON .)


state 41

    (20) impresion -> PRINTF LPAREN STRING . RPAREN SEMICOLON

    RPAREN          shift and go to state 48


state 42

    (25) impresion -> PRINTF LPAREN error . RPAREN SEMICOLON

    RPAREN          shift and go to state 49


state 43

    (5) declaracion -> INT IDENTIFIER lista_identificadores SEMICOLON .

    INT             reduce using rule 5 (declaracion -> INT IDENTIFIER lista_identificadores SEMICOLON .)
    READ            reduce using rule 5 (declaracion -> INT IDENTIFIER lista_identificadores SEMICOLON .)
    IDENTIFIER      reduce using rule 5 (declaracion -> INT IDENTIFIER lista_identificadores SEMICOLON .)
    PRINTF          reduce using rule 5 (declaracion -> INT IDENTIFIER lista_identificadores SEMICOLON .)
    END             reduce using rule 5 (declaracion -> INT IDENTIFIER lista_identificadores SEMICOLON .)
    RBRACE          reduce using rule 5 (declaracion -> INT IDENTIFIER lista_identificadores SEMICOLON .)


state 44

    (6) lista_identificadores -> COMA IDENTIFIER . lista_identificadores
    (6) lista_identificadores -> . COMA IDENTIFIER lista_identificadores
    (7) lista_identificadores -> . empty
    (22) empty -> .

    COMA            shift and go to state 33
    SEMICOLON       reduce using rule 22 (empty -> .)

    lista_identificadores          shift and go to state 50
    empty                          shift and go to state 34

state 45

    (17) expresion -> IDENTIFIER PLUS . IDENTIFIER

    IDENTIFIER      shift and go to state 51


state 46

    (16) asignacion -> IDENTIFIER EQUALS expresion SEMICOLON .

    RBRACE          reduce using rule 16 (asignacion -> IDENTIFIER EQUALS expresion SEMICOLON .)
    READ            reduce using rule 16 (asignacion -> IDENTIFIER EQUALS expresion SEMICOLON .)
    IDENTIFIER      reduce using rule 16 (asignacion -> IDENTIFIER EQUALS expresion SEMICOLON .)
    PRINTF          reduce using rule 16 (asignacion -> IDENTIFIER EQUALS expresion SEMICOLON .)
    END             reduce using rule 16 (asignacion -> IDENTIFIER EQUALS expresion SEMICOLON .)


state 47

    (24) asignacion -> IDENTIFIER EQUALS error SEMICOLON .

    RBRACE          reduce using rule 24 (asignacion -> IDENTIFIER EQUALS error SEMICOLON .)
    READ            reduce using rule 24 (asignacion -> IDENTIFIER EQUALS error SEMICOLON .)
    IDENTIFIER      reduce using rule 24 (asignacion -> IDENTIFIER EQUALS error SEMICOLON .)
    PRINTF          reduce using rule 24 (asignacion -> IDENTIFIER EQUALS error SEMICOLON .)
    END             reduce using rule 24 (asignacion -> IDENTIFIER EQUALS error SEMICOLON .)


state 48

    (20) impresion -> PRINTF LPAREN STRING RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 52


state 49

    (25) impresion -> PRINTF LPAREN error RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 53


state 50

    (6) lista_identificadores -> COMA IDENTIFIER lista_identificadores .

    SEMICOLON       reduce using rule 6 (lista_identificadores -> COMA IDENTIFIER lista_identificadores .)


state 51

    (17) expresion -> IDENTIFIER PLUS IDENTIFIER .

    SEMICOLON       reduce using rule 17 (expresion -> IDENTIFIER PLUS IDENTIFIER .)


state 52

    (20) impresion -> PRINTF LPAREN STRING RPAREN SEMICOLON .

    RBRACE          reduce using rule 20 (impresion -> PRINTF LPAREN STRING RPAREN SEMICOLON .)
    READ            reduce using rule 20 (impresion -> PRINTF LPAREN STRING RPAREN SEMICOLON .)
    IDENTIFIER      reduce using rule 20 (impresion -> PRINTF LPAREN STRING RPAREN SEMICOLON .)
    PRINTF          reduce using rule 20 (impresion -> PRINTF LPAREN STRING RPAREN SEMICOLON .)
    END             reduce using rule 20 (impresion -> PRINTF LPAREN STRING RPAREN SEMICOLON .)


state 53

    (25) impresion -> PRINTF LPAREN error RPAREN SEMICOLON .

    RBRACE          reduce using rule 25 (impresion -> PRINTF LPAREN error RPAREN SEMICOLON .)
    READ            reduce using rule 25 (impresion -> PRINTF LPAREN error RPAREN SEMICOLON .)
    IDENTIFIER      reduce using rule 25 (impresion -> PRINTF LPAREN error RPAREN SEMICOLON .)
    PRINTF          reduce using rule 25 (impresion -> PRINTF LPAREN error RPAREN SEMICOLON .)
    END             reduce using rule 25 (impresion -> PRINTF LPAREN error RPAREN SEMICOLON .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for INT in state 6 resolved as shift
WARNING: shift/reduce conflict for READ in state 7 resolved as shift
WARNING: shift/reduce conflict for IDENTIFIER in state 7 resolved as shift
WARNING: shift/reduce conflict for PRINTF in state 7 resolved as shift
WARNING: shift/reduce conflict for END in state 7 resolved as shift
